--- a/1.md
+++ b/1.md
@@ -1,4 +1,4 @@
-# Progate Sunday Schoolについて
+# Progate Sunday School
 毎月第1日曜日に、Progateを使ってプログラミングを学習するイベントです。
 
 # 第1回の概要
@@ -6,6 +6,25 @@
 ## スケジュール
 | 時間 |  内容 |
 |:------------ |:-------------- |
-| 10:00 ~ | 全体説明 |
+| 10:00 ~ | 全体説明（鈴木）<br>代表挨拶（加藤） |
 | 10:10 ~ 12:30 | 学習 |
 | 12:30 ~ 13:00 | 懇親会 |
+
+## メンター紹介
+
+当日は下記２名のメンバーに加え、数名の弊社エンジニアが皆様の学習をサポート致します。
+
+#### 加藤 將倫
+愛知県出身。1993年生まれ。
+小学校と中学校をオーストラリアで過ごした後に帰国。
+
+プログラミングに興味を持ち東京大学工学部電子情報工学科に進学するも、経験豊富な周りの学生についていけず挫折。より実務的なプログラミングを勉強したいと思い、プログラミングサークルでの活動や受託を通じてスキルを磨く。その後は複数のスタートアップに協力しながらプログラミングを教えるようになり、これをオンラインのサービスとして提供したいと思い、2014年7月に株式会社Progateを創業、現代表取締役。
+
+自分たちが色々な人に助けられプログラミングを学んだ経験から、ユーザー一人ひとりに寄り添い、導いていけるようなサービスを目指している。現在は主にエンジニアとしてプロダクトの開発に関わりながら、幅広く担当。
+
+#### 鈴木 介翔
+愛知県豊田市出身。1996/3/1生まれ。東京工業大学工学部。
+
+大学１年次に現CEO加藤のProgate創業に影響を受け、プログラミング学習を開始。その後、スタートアップ２社でのエンジニアとしてのインターンを経て、2015年10月にProgateにジョイン。
+
+Progateでは主にエンジニアとして活動。元参加者としての自身の経験を元に、「Progate School」の企画・運営も担当している。
