Edit time table

--- a/1.md
+++ b/1.md
@@ -4,15 +4,14 @@
 # 第1回の概要
 
 ## スケジュール
-| 時間 |  内容 |
-|:------------ |:-------------- |
-| 10:00 ~ | 全体説明（鈴木）<br>代表挨拶（加藤） |
-| 10:10 ~ 12:30 | 学習 |
-| 12:30 ~ 13:00 | 懇親会 |
+
+| 時間 | 10:00 ~ | 10:10 ~ | 11:10 ~ | 11:20 ~ | 12:20 ~ | 13:00 |
+|:------------ |:-------------- |:-------------- |:-------------- |:-------------- |:-------------- |:-------------- |
+| 内容 | 全体説明（鈴木）<br>代表挨拶（加藤） | Progateで学習 | 休憩 | Progateで学習 | 懇親会（昼食あり） | 解散 |
 
 ## メンター紹介
 
-当日は下記２名のメンバーに加え、数名の弊社エンジニアが皆様の学習をサポート致します。
+当日は下記２名のメンターに加え、数名の弊社エンジニアが皆様の学習をサポート致します。
 
 #### 加藤 將倫
 愛知県出身。1993年生まれ。
