Add sunday-school description

--- a/1.md
+++ b/1.md
@@ -1,15 +1,65 @@
 # Progate Sunday School
-毎月第1日曜日に、Progateを使ってプログラミングを学習するイベントです。
+日曜日の午前中にProgateを使ってプログラミングを学習するイベントです。
+<br>
+普段からProgateを使っている方も、まだProgateを使ったことがない方も、この機会にProgateでプログラミングを学習してみませんか？
+<br>
 
-# 第1回の概要
+### 特徴
+- 当日はProgateを作っているエンジニアがメンターとして参加します。質問し放題です！
+- イベント時間内はProgateの有料コースを無料で開放します！
+- プログラミングを学習するだけでなく、参加者同士やメンターとの懇親会も予定しています！
 
-## スケジュール
+
+### 対象
+- プログラミングを学習したい人
+<br>
+（学べる内容に関しては、後述の「学習内容」の項目を参考にしてください）
+
+**学生・社会人などの制限は一切ございません！**
+
+### 参加費用
+- 1000円（ただし昼食代として）
+
+<br>
+
+# 第1回（2017年2月5日）
+<br>
+記念すべき第1回は2017年2月5日（日）に行います！！
+
+### 学習内容
+今回のテーマは「**HTML & CSS**」です！
+<br>
+HTMLはWebページの見た目をつくる言語で、Progateでも最も人気のある言語の1つです。
+<br>
+[Progate](http://prog-8.com/ "Progate") にはHTMLを学習できるコースが全8レッスンあります。
+<br>
+
+- 学習コース
+    - 初級編
+    - 中級編
+    - 上級編
+- 道場コース
+    - 初級編
+    - 中級編
+    - 上級編
+- 実践コース
+    - Ⅰ
+    - Ⅱ
+
+上記8レッスンを使ってHTMLを学習していきましょう！
+
+<br>
+### スケジュール
 
 | 時間 | 10:00 ~ | 10:10 ~ | 11:10 ~ | 11:20 ~ | 12:20 ~ | 13:00 |
 |:------------ |:-------------- |:-------------- |:-------------- |:-------------- |:-------------- |:-------------- |
 | 内容 | 全体説明（鈴木）<br>代表挨拶（加藤） | Progateで学習 | 休憩 | Progateで学習 | 懇親会（昼食あり） | 解散 |
 
-## メンター紹介
+- 会場（オフィス）には9時30分頃から入室可能です。
+- 昼食はピザを用意する予定です。
+
+<br>
+### メンター紹介
 
 当日は下記２名のメンターに加え、数名の弊社エンジニアが皆様の学習をサポート致します。
 
@@ -27,3 +77,11 @@
 大学１年次に現CEO加藤のProgate創業に影響を受け、プログラミング学習を開始。その後、スタートアップ２社でのエンジニアとしてのインターンを経て、2015年10月にProgateにジョイン。
 
 Progateでは主にエンジニアとして活動。元参加者としての自身の経験を元に、「Progate School」の企画・運営も担当している。
+
+<br>
+### その他
+ご意見・ご質問等ございましたら、スクール担当鈴木までご連絡ください。
+<br>
+email: suzukikaito@prog-8.com
+<br>
+tel: 03-6455-0950
