--- a/1.md
+++ b/1.md
@@ -31,7 +31,7 @@
 <br>
 HTMLはWebページの見た目をつくる言語で、Progateでも最も人気のある言語の1つです。
 <br>
-[Progate](http://prog-8.com/ "Progate") にはHTMLを学習できるコースが全8レッスンあります。
+[Progate](http://prog-8.com/ "Progate") にはHTMLを学習できるレッスンが全8レッスンあります。
 <br>
 
 - 学習コース
